Maintain JVMD compiler identity as live state (#30)
* docs: start live state tree task

* perf: capture live state tree baseline

* perf: keep baseline proof running through correctness findings

* perf: isolate Maven project-model baseline

* perf: align proof with settled CMP-01 state

* perf: do not require clean diagnostics for completion probe

* perf: serialize mutation proof through the LSP queue

* docs: record live state tree baseline

* refactor: establish live state tree primitives

* test: run live state invariants in phase 1

* docs: complete live state tree phase 1

* refactor: maintain live source state from mutations

* refactor: persist canonical live source identity

* fix: keep live source state session-owned

* docs: complete live state tree phase 2

* docs: record live source state cutover

* refactor: maintain source package lookup in live state

* refactor: capture compiler source identity from live state

* refactor: fence javac with live source state

* refactor: read javac source membership from live state

* refactor: persist only captured diagnostic dependencies

* refactor: validate snapshot dependencies from live identity

* refactor: remove source maps from analyzer validation

* refactor: separate local artifact inventory from compiler state

* refactor: update workspace facts from live source deltas

* fix: reconcile live source membership through canonical mutations

* fix: propagate live source delta failures

* fix: fence compiler transactions on source transitions only

* fix: use source input epoch for compiler transaction fences

* fix: keep semantic updates out of javac source generation

* fix: synchronize request-relevant live source state

* fix: fence only implicit javac source reads

* fix: share analyzer document state with compiler

* fix: observe bounded compiler and workspace inputs

* test: assert live compiler input boundaries

* test: fix live input test declarations

* test: fix boundary test declarations

* test: